--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,15 +3,15 @@
 }
 
 :root {
-  --primary: #44e9ff;
-  --secondary: #497980;
-  --tertiary: rgb(192, 246, 253);
-  --grey: #333;
+  --primary: #f79400fd;
+  --secondary: #020080;
+  --tertiary: rgba(255, 255, 255, 0.671);
+  --grey: rgb(2, 2, 2);
   font-size: 62.5%;
 }
 
 body {
-  background: #ededed;
+  background: #ededed00;
   color: var(--grey);
   margin: 0;
   padding: 0;
