--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
 }
 
 :root {
-  --primary: #f79400fd;
-  --secondary: #020080;
+  --primary: #ff9900fd;
+  --secondary: #001e80;
   --tertiary: rgba(255, 255, 255, 0.671);
   --grey: rgb(2, 2, 2);
   font-size: 62.5%;
@@ -19,6 +19,9 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-image: url("https://www.sheknows.com/wp-content/uploads/2020/06/best-post-it-note-sticky-sets-amazon.jpg?w=1280");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 header {
@@ -82,6 +85,7 @@ footer {
   justify-content: center;
   margin: 25px auto;
   width: 95%;
+  
 }
 
 .task-list-wrapper {
